[project]
name = "xai"
version = "0.1.0"
description = "Interpretable AI techniques"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "keras>=3.11.2",
    "matplotlib>=3.10.5",
    "notebook>=7.4.5",
    "numpy>=2.3.2",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "tensorflow>=2.20.0",
    "tensorflow-intel>=0.0.1",
]
